# elite_cs66_test

./: Dockerfile  README.md  docker-compose.yml
hello_moveit/: package.xml
hello_moveit/src/: hello_moveit.cpp
my_elite_robot_cell/my_elite_robot_cell_control/: CMakeLists.txt  package.xml
my_elite_robot_cell/my_elite_robot_cell_control/config/: mobile_base_controllers.yaml
my_elite_robot_cell/my_elite_robot_cell_control/launch/: start_robot.launch.py
my_elite_robot_cell/my_elite_robot_cell_control/rviz/: view_robot.rviz
my_elite_robot_cell/my_elite_robot_cell_control/urdf/: my_elite_robot_cell_controlled.urdf.xacro
my_elite_robot_cell/my_elite_robot_cell_description/: CMakeLists.txt  package.xml
my_elite_robot_cell/my_elite_robot_cell_description/launch/: mobile_cleaning_robot_sim.launch.py  view_mobile_cleaning_robot.launch.py  view_robot.launch.py
my_elite_robot_cell/my_elite_robot_cell_description/meshes/: table.dae  wall.dae
my_elite_robot_cell/my_elite_robot_cell_description/rviz/: urdf.rviz  view_robot.rviz
my_elite_robot_cell/my_elite_robot_cell_description/urdf/: mobile_cleaning_robot.urdf.xacro  my_elite_robot_cell.urdf.xacro  my_elite_robot_cell_macro.xacro
my_elite_robot_cell/my_elite_robot_cell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
my_elite_robot_cell/my_elite_robot_cell_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  my_elite_robot_cell.srdf
my_elite_robot_cell/my_elite_robot_cell_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py
tutorials/: Elite Robots ROS2 tutorials.md  Elite Robots ROS2 教程.md
